mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/vita_profesional__c.object-meta.xml
<CustomObject>
    <description>Representa al personal clínico que atiende pacientes</description>
    <label>Profesional</label>
    <nameField>
        <displayFormat>PRO-{0000}</displayFormat>
        <label>Profesional Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profesionales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>