mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/Apellido_U__c.field-meta.xml
<CustomField>
    <fullName>Apellido_U__c</fullName>
    <formula>usuario_id__r.apellido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido</label>
    <type>Text</type>
</CustomField>