mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/dias_atencion__c.field-meta.xml
<CustomField>
    <fullName>dias_atencion__c</fullName>
    <description>Días en que atiende</description>
    <label>Días de Atención</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miércoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
            <value>
                <fullName>Sábado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>