mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/DNI_U__c.field-meta.xml
<CustomField>
    <fullName>DNI_U__c</fullName>
    <formula>usuario_id__r.usuario_dni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>