mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/especialidad__c.field-meta.xml
<CustomField>
    <fullName>especialidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Área médica principal.</description>
    <label>Especialidad Principal</label>
    <referenceTo>vita_especialidad__c</referenceTo>
    <relationshipLabel>Profesionales</relationshipLabel>
    <relationshipName>Profesionales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>