mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/estado_profesional__c.field-meta.xml
<CustomField>
    <fullName>estado_profesional__c</fullName>
    <description>Si está habilitado para recibir turnos</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
            <value>
                <fullName>Licencia</fullName>
            </value>
            <value>
                <fullName>Retirado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>