mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/horario_atencion__c.field-meta.xml
<CustomField>
    <fullName>horario_atencion__c</fullName>
    <description>Horario de atención del profesional</description>
    <label>Horario de Atención</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mañana</fullName>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Mixto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>