mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/matricula__c.field-meta.xml
<CustomField>
    <fullName>matricula__c</fullName>
    <description>Número de matrícula habilitante.</description>
    <label>Matrícula Profesional</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>