mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/modalidad_atencion__c.field-meta.xml
<CustomField>
    <fullName>modalidad_atencion__c</fullName>
    <description>Formas en que atiende el profesional</description>
    <label>Modalidad de Atención</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Videollamada</fullName>
            </value>
            <value>
                <fullName>Domicilio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>