mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/Nombre_de_ESPEC__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_ESPEC__c</fullName>
    <formula>especialidad__r.Ayuda_Nombre_Espec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Especialidad</label>
    <type>Text</type>
</CustomField>