mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/Nombre_U__c.field-meta.xml
<CustomField>
    <fullName>Nombre_U__c</fullName>
    <formula>usuario_id__r.nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>