mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/tipo_matricula__c.field-meta.xml
<CustomField>
    <fullName>tipo_matricula__c</fullName>
    <description>Jurisdicción de la matrícula</description>
    <label>Tipo de Matricula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Provincial</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>