mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/fields/usuario_id__c.field-meta.xml
<CustomField>
    <fullName>usuario_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usuario Vinculado</label>
    <referenceTo>vita_usuario__c</referenceTo>
    <relationshipLabel>Profesionales</relationshipLabel>
    <relationshipName>Profesionales1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>