mi-primer-proyecto/force-app/main/default/objects/vita_profesional__c/listViews/Lista_de_Profesionales.listView-meta.xml
<ListView>
    <fullName>Lista_de_Profesionales</fullName>
    <columns>NAME</columns>
    <columns>Apellido_U__c</columns>
    <columns>Nombre_U__c</columns>
    <columns>especialidad__c</columns>
    <columns>Nombre_de_ESPEC__c</columns>
    <columns>tipo_matricula__c</columns>
    <columns>matricula__c</columns>
    <columns>dias_atencion__c</columns>
    <columns>horario_atencion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lista de Profesionales</label>
</ListView>